# raylibEngine

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: default.frag  default.vert  defaultDeferred.frag  defaultForward.frag  defaultForward.vert  shading.vert
engine/: CMakeLists.txt  main.cpp  skiff.h
engine/graphics/: camera.cpp  camera.h  gbuffer.cpp  gbuffer.h
engine/physics/: collider.cpp  collider.h  collider_box.cpp  collider_box.h  collider_plane.cpp  collider_plane.h  collider_sphere.cpp  collider_sphere.h  physics.cpp  physics.h  physics_world.cpp  physics_world.h  rigidbody.cpp  rigidbody.h
